--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,5 +6,67 @@ html {
     font-size: var(--Font-size);
 }
 body {
-    font-family: 'League Spartan', sans-serif;    
+    font-family: 'League Spartan', sans-serif;
+    font-size: var()--Font-size;
+}
+.main {
+    margin-inline: 1.5rem;
+    margin-block: 5rem;
+}
+.top-section {
+    flex-direction: column; 
+    row-gap: 2.5rem;
+    margin-block-end: 2.4rem;
+}
+.top-section .product-intro {
+    text-align: center;
+    margin-block-end: auto;
+}
+.top-section .product-intro h1 {
+    font-weight: 700;
+    font-size: 2.55rem;
+    line-height: 0.8;
+    color: var(--Very-Dark-Magenta);
+    padding-block-end: 2rem;
+}
+.top-section .product-intro p {
+    font-weight: 500;
+    font-size: 1.167rem;
+    line-height: 1.4;
+    color: var(--Dark-Grayish-Magenta)
+}
+aside .bg-container {
+    flex-direction: column;
+    background-color: var(--Light-Grayish-Magenta);
+    row-gap: 1rem;
+    align-items: center;
+    padding-block: 1rem;
+    border-radius: 0.667rem;
+    transition: all .2sec ease-in-out
+}
+aside .bg-container:hover {
+    padding-block: 1.2rem;
+    opacity: .8;
+}
+aside .bg-container:nth-of-type(2) {
+    margin-block: 1rem;
+}
+aside .bg-container .star-wrapper {
+    gap: 0.6rem;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+aside .bg-container .star-wrapper img.stars {
+    width: 100;
+    height: 100;
+}
+aside .bg-container .rating-text {
+    font-size: 1.157rem;
+    font-weight: 700;
+    color: var(--Very-Dark-Magenta);
+}
+
+
+@media (min-width: 500px) {
+    
 }
