--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ body {
     flex-direction: column; 
     row-gap: 2.5rem;
     margin-block-end: 2.4rem;
+    
 }
 .top-section .product-intro {
     text-align: center;
@@ -42,11 +43,10 @@ aside .bg-container {
     align-items: center;
     padding-block: 1rem;
     border-radius: 0.667rem;
-    transition: all .2sec ease-in-out
+    transition: all 1s ease-in-out 
 }
 aside .bg-container:hover {
-    padding-block: 1.2rem;
-    opacity: .8;
+    background-color: var(--Dark-Grayish-Magenta);
 }
 aside .bg-container:nth-of-type(2) {
     margin-block: 1rem;
@@ -65,7 +65,49 @@ aside .bg-container .rating-text {
     font-weight: 700;
     color: var(--Very-Dark-Magenta);
 }
+/* End of top-secton css */
 
+/* start of profile section css */
+.profiles .cards  {
+    padding-inline: 2rem;
+    padding-block: 2.5rem;
+    border-radius: .667rem;
+    background-color: var(--Very-Dark-Magenta);
+    color: white;
+    font-size: 1.1rem;
+    font-weight: 500;
+}
+.profiles .cards:nth-of-type(2) {
+    margin-block: 1rem;
+}
+.cards figure {
+    align-items: center;
+    gap: 1.7rem;
+    margin-block-end: 1.7rem;
+}
+.cards > p {
+    line-height: 1.5rem;
+}
+.cards figure img {
+    height: 2.7rem;
+    aspect-ratio: 1;
+    border-radius: 50%;
+}
+.cards figure figcaption p {
+    font-weight: 700;
+    line-height: 1.3rem;
+}
+.cards figure figcaption p:last-child {
+    color: var(--Soft-Pink);
+    font-weight: 500;
+}
+
+footer {
+    left: 0;
+    right: 0;
+    padding-block: 3rem;
+    background-color: var(--Light-Grayish-Magenta);
+}
 
 @media (min-width: 500px) {
     
