--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,11 @@ html {
 body {
     font-family: 'League Spartan', sans-serif;
     font-size: var()--Font-size;
-    background-image: url("../images/bg-pattern-top-mobile.svg");
-    background-repeat: no-repeat;
+    background-image: 
+        url("../images/bg-pattern-top-mobile.svg"), 
+        url("../images/bg-pattern-bottom-mobile.svg");
+    background-position: left top, right bottom;
+    background-repeat: no-repeat, no-repeat ;
 }
 .main {
     margin-inline: 1.5rem;
@@ -63,13 +66,19 @@ aside .bg-container .star-wrapper img.stars {
     height: 100;
 }
 aside .bg-container .rating-text {
-    font-size: 1.157rem;
+    font-size: 0.90em;
     font-weight: 700;
     color: var(--Very-Dark-Magenta);
 }
 /* End of top-secton css */
 
 /* start of profile section css */
+.profiles {
+    display: flex;
+    flex-direction: column;
+    gap: 1.7rem;
+    justify-content: center;
+}
 .profiles .cards  {
     padding-inline: 2rem;
     padding-block: 2.5rem;
@@ -78,9 +87,6 @@ aside .bg-container .rating-text {
     color: white;
     font-size: 1.1rem;
     font-weight: 500;
-}
-.profiles .cards:nth-of-type(2) {
-    margin-block: 1rem;
 }
 .cards figure {
     align-items: center;
@@ -104,13 +110,96 @@ aside .bg-container .rating-text {
     font-weight: 500;
 }
 
-footer {
+/* footer {
     left: 0;
     right: 0;
     padding-block: 3rem;
-    background-color: var(--Light-Grayish-Magenta);
+    background-color: var(--Light-Grayish-Magenta); */
+}
+@media (min-width: 500px) {
+    .main {
+        margin-inline: 15%;
+    }
 }
 
-@media (min-width: 500px) {
+@media (min-width: 768px) {
+    body {
+        background:
+         url("../images/bg-pattern-top-desktop.svg") top left no-repeat,
+         url("../images/bg-pattern-bottom-desktop.svg") right bottom no-repeat
+        ;
+    } 
+    .main {
+        margin-inline: 5%;
+        margin-block: 5rem;
+    }
+    .top-section {
+        flex-direction: row; 
+        column-gap: 2.5rem;
+        margin-block-end: 2.4rem;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .top-section .product-intro {
+        text-align: start;
+        width: 35%;
+        font-size: var(--Font-size);
+    }   
+    .top-section .product-intro h1 {
+        font-size: 2.0em;
+        line-height: 0.8;
+    }
+    .top-section .product-intro p {
+        font-size: 1.2em;
+        line-height: 1.4;
+    }
+    aside.rating-wrapper {
+        flex-direction: column;
+    }
     
+    aside .bg-container {
+        flex-direction: row;
+        column-gap: 1rem;
+        position: relative;
+        padding-inline: 30px;
+    }
+    .bg-container:nth-of-type(1) {
+        right: 60px;
+    }
+    .bg-container:nth-of-type(2) {
+        right: 30px;
+    }
+    
+    /* Profile Card section*/
+    .profiles {
+        flex-direction: row;
+        column-gap: 1.7rem;
+        justify-content: center;
+    }
+    .cards:nth-of-type(2) {
+        position: relative;
+        top: calc( 1.7*.5rem);
+    }
+    .cards:nth-of-type(3) {
+        position: relative;
+        top: calc( 1.7rem);
+    }
+}
+@media (min-width: 900px) {
+    .top-section .product-intro h1 {
+        font-size: 3.0em;
+        line-height: 0.8;
+    }
+    aside .bg-container .rating-text {
+        font-size: 1.157rem;
+    }
+}
+@media (min-width: 1250px) {
+    .main {
+        margin-inline: 10%;
+    }
+    .top-section .product-intro h1 {
+        font-size: 3.7em;
+        line-height: 0.8;
+    }
 }
